--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     },
     "exclude": [
         "node_modules",
-        ".vscode-test"
+        ".vscode-test",
+        "tests",
+        "docs",
+        "src/__tests__",
+        "out"
     ]
 }
